

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}


group = 'io.github.vimasig'
version = '1.7.0'



repositories {
    mavenCentral()
}


java {

    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}


application {
    mainClass = 'io.github.vimasig.bozar.ui.Launcher'
    applicationDefaultJvmArgs = ['--add-modules', 'javafx.controls,javafx.fxml']

}

javafx {
    version = "23"
    modules = [ 'javafx.controls', 'javafx.fxml' ] // Specify required JavaFX modules. [1, 16]
}



dependencies {

    // ASM
    implementation 'org.ow2.asm:asm:9.8'
    implementation 'org.ow2.asm:asm-tree:9.8'
    implementation 'org.ow2.asm:asm-commons:9.8'
    implementation 'org.ow2.asm:asm-util:9.8'

    // Gson
    implementation 'com.google.code.gson:gson:2.13.1'
    // commons-cli
    implementation 'commons-cli:commons-cli:1.9.0'
}


processResources {
    expand(project.properties)
}

jar {
    manifest {
        attributes('Implementation-Version': project.version)
    }
}


shadowJar {

    manifest.inheritFrom project.tasks.jar.manifest

    archiveClassifier = 'all'
}


build.dependsOn(shadowJar)